# DirTreeGen

./: .gitignore  README.md  neutralino.config.json  package-lock.json  package.json
.github/workflows/: release.yml
Neutralino/: neutralino.config.json
Neutralino/resources/: index.html
Neutralino/resources/css/: styles.css
Neutralino/resources/js/: script.js
resources/: index.html
resources/css/: styles.css
resources/js/: script.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/js/: script.js
