[package]
name = "DirTreeGen"
version = "0.1.0"
description = "目录结构树生成工具"
authors = ["Ethaniel <Ethaniel@HcyHub.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dir_tree_gen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
regex = "1.12.3"
globset = "0.4.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"     # unwind、abort
strip = true

[package.metadata.tauri-winres]
ProductName = "LepViewer"
LegalCopyright = "Copyright © 2026 Ethaniel <Ethaniel@HcyHub.com>"
OriginalFilename = "LepViewer.exe"
CompanyName = "Ethaniel"
